--- a/templates/back_end/evisa/infos_entreprise/__header.html.twig
+++ b/templates/back_end/evisa/infos_entreprise/__header.html.twig
@@ -2,6 +2,6 @@
 
     <a class="nav-link {% if app.request.attributes.get('_route') == 'infos_entreprise_evisa' %} active {% endif %}" href="{{ path('infos_entreprise_evisa')}}"><i class="fa fa-users-cog"></i>Informations générales</a>
     <a class="nav-link {% if app.request.attributes.get('_route') == 'bonde_de_commande_entreprise_evisa' %} active {% endif %}" href="{{ path('bonde_de_commande_entreprise_evisa')}}"><i class="fa fa-users-cog"></i>Textes des bons de commandes</a>
-    <a class="nav-link {% if app.request.attributes.get('_route') == 'show_demandes_visa_classic' %} active {% endif %}" href="{{ path('show_demandes_visa_classic')}}"><i class="fa fa-users-cog"></i>Archives</a>
+    <a class="nav-link {% if app.request.attributes.get('_route') == 'show_demandes_visa_classic' %} active {% endif %}" href="{{ path('show_demandes_visa_classic')}}"><i class="fa fa-users-cog"></i>Gestion des emails</a>
 
 </nav>
