--- a/templates/back_end/evisa/pays_evisa_show.html.twig
+++ b/templates/back_end/evisa/pays_evisa_show.html.twig
@@ -18,7 +18,7 @@
                         <th data-field="pays.iso" data-sortable="true">Code ISO</th>
                         <th data-field="pays" data-formatter="libelleFormatter" data-sortable="true">Nom et zone</th>
                         <th data-field="visas" data-formatter="listeVisasFormatter">Visas disponibles</th>
-                        <th data-field="valide" data-formatter="booleanFormatter" data-align="center" data-sortable="true">Actif</th>
+                        <th data-field="active" data-formatter="booleanFormatter" data-align="center" data-sortable="true">Actif</th>
                         <th data-field="edit" data-formatter="actionsFormatter">Editer</th>
                     </tr>
                 </thead>
