--- a/templates/back_end/evisa/infos_entreprise/bon_de_commande_entreprise_edit.html.twig
+++ b/templates/back_end/evisa/infos_entreprise/bon_de_commande_entreprise_edit.html.twig
@@ -39,6 +39,7 @@
                     <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> </a>
                 </li>
             </ul>
+            {{form_widget(form._token)}}
             {{ form_end(form, {'render_rest': false})}}
         </div>
     </div>
