--- a/templates/back_end/visa_classic/doccuments/doccument_facultatif_edit.html.twig
+++ b/templates/back_end/visa_classic/doccuments/doccument_facultatif_edit.html.twig
@@ -6,24 +6,27 @@
  </style>
 
 <div class="row justify-content-center mt-5">
-  <div class="col-10 text-center">    
-          {{ form_start(form, {'action': path('edit_doccument_facultatif', {'id': doc.id}), 'method': 'POST'}) }}
-
-          <div class="row form-group text-right">
-              {{ form_label(form.titre, 'Titre', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
-              <div class="input-group col-sm-10">
-                  {{ form_widget(form.titre) }}
-              </div>
-          </div>
-          <div class="row form-group text-right">
-              {{ form_label(form.contenu, 'Contenu', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
-              <div class="input-group col-sm-10">
-                  {{ form_widget(form.contenu) }}
-              </div>
-          </div>
-          
-          <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> Enregistrer </a>
-
-      {{ form_end(form, {'render_rest': false})}}
+  <div class="col-10 text-center">  
+    {% if app.request.attributes.get('_route') == 'edit_doccument_facultatif_evisa' %}
+        {{ form_start(form, {'action': path('edit_doccument_facultatif_evisa', {'id': doc.id}), 'method': 'POST'}) }}
+    {% else %}
+        {{ form_start(form, {'action': path('edit_doccument_facultatif', {'id': doc.id}), 'method': 'POST'}) }}
+    {% endif %}
+        <div class="row form-group text-right">
+            {{ form_label(form.titre, 'Titre', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+            <div class="input-group col-sm-10">
+                {{ form_widget(form.titre) }}
+            </div>
+        </div>
+        <div class="row form-group text-right">
+            {{ form_label(form.contenu, 'Contenu', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+            <div class="input-group col-sm-10">
+                {{ form_widget(form.contenu) }}
+            </div>
+        </div>
+        
+        <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> Enregistrer </a>
+        {{form_widget(form._token)}}
+    {{ form_end(form, {'render_rest': false})}}
   </div>
 </div>
