pays, note de course, faq modifier

--- a/templates/back_end/assurance/assurance_show.html.twig
+++ b/templates/back_end/assurance/assurance_show.html.twig
@@ -1,5 +1,5 @@
 {% extends "back_end/base.html.twig" %}
-
+{% block title %}Voir toute les assurances{% endblock %}
 {% block menu_header %}
     {% include "back_end/assurance/__header.html.twig" %}
 {% endblock %}
