--- a/templates/back_end/client/edit_client.html.twig
+++ b/templates/back_end/client/edit_client.html.twig
@@ -1,5 +1,5 @@
 {% extends "back_end/base.html.twig" %}
-
+{% block title %}Modifier un client{% endblock %}
 
 {% block contenu %}
 {{ form_start(form)}}
