--- a/templates/back_end/faq/questions_reponses_show.html.twig
+++ b/templates/back_end/faq/questions_reponses_show.html.twig
@@ -1,5 +1,5 @@
 {% extends "back_end/base.html.twig" %}
-
+{% block title %}Questions/Réponses{% endblock %}
 {% block menu_header %}
     {% include "back_end/faq/__header.html.twig" %}
 {% endblock %}
