--- a/templates/back_end/utilisateurs/liste.html.twig
+++ b/templates/back_end/utilisateurs/liste.html.twig
@@ -1,4 +1,5 @@
 {% extends "back_end/base.html.twig" %}
+{% block title %}Utilisateurs{% endblock %}
 
 {% block menu_header %}
     {% include "back_end/utilisateurs/__header.html.twig" %}
