--- a/templates/back_end/zones/zone_geographique_edit.html.twig
+++ b/templates/back_end/zones/zone_geographique_edit.html.twig
@@ -1,5 +1,6 @@
 {% extends "back_end/base.html.twig" %}
 
+{% block title %}Modifier une zone{% endblock %}
 
 {% block contenu %}
 {{ form_start(form)}}
