--- a/templates/back_end/actualite/page_divers_show.html.twig
+++ b/templates/back_end/actualite/page_divers_show.html.twig
@@ -1,5 +1,5 @@
 {% extends "back_end/base.html.twig" %}
-
+{% block title %}Pages divers{% endblock %}
 {% block menu_header %}
     {% include "back_end/actualite/__header.html.twig" %}
 {% endblock %}
