--- a/templates/back_end/assurance/assurance_edit.html.twig
+++ b/templates/back_end/assurance/assurance_edit.html.twig
@@ -1,5 +1,5 @@
 {% extends "back_end/base.html.twig" %}
-
+{% block title %}Modifier une assurance{% endblock %}
 {% block menu_header %}
     {% include "back_end/assurance/__header.html.twig" %}
 {% endblock %}
