--- a/templates/back_end/home/home_edit.html.twig
+++ b/templates/back_end/home/home_edit.html.twig
@@ -1,5 +1,5 @@
 {% extends "back_end/base.html.twig" %}
-
+{% block title %}Modifier la page d'accueil{% endblock %}
 {% block contenu %}
 {{ form_start(form)}}
 
