--- a/templates/back_end/note_de_course/signature_note_de_course_add.html.twig
+++ b/templates/back_end/note_de_course/signature_note_de_course_add.html.twig
@@ -1,5 +1,5 @@
 {% extends "back_end/base.html.twig" %}
-
+{% block title %}Signature électronique{% endblock %}
 
 {% block contenu %}
 {{ form_start(form)}}
