--- a/templates/back_end/utilisateurs/droits/liste_ip_users.html.twig
+++ b/templates/back_end/utilisateurs/droits/liste_ip_users.html.twig
@@ -1,4 +1,5 @@
 {% extends "back_end/base.html.twig" %}
+{% block title %}Liste des utilisateurs / Autorisation ip{% endblock %}
 
 {% block menu_header %}
     {% include "back_end/utilisateurs/__header.html.twig" %}
