--- a/templates/back_end/utilisateurs/new_utilisateur.html.twig
+++ b/templates/back_end/utilisateurs/new_utilisateur.html.twig
@@ -1,4 +1,5 @@
 {% extends "back_end/base.html.twig" %}
+{% block title %}Nouveau utilisateur{% endblock %}
 
 {% block menu_header %}
     {% include "back_end/utilisateurs/__header.html.twig" %}
