--- a/templates/back_end/utilisateurs/droits/edit_access_user.html.twig
+++ b/templates/back_end/utilisateurs/droits/edit_access_user.html.twig
@@ -37,9 +37,8 @@
             </div>
 
             <div class="row form-group text-right">
-                <div class="input-group col-sm-12">
-                    {{ form_widget(form.submit) }}
-
+                <div class="input-group col-sm-3 offset-sm-9">
+                    <button type="submit" id="services_submit" name="services[submit]" class="form-control btn btn-primary"><i class=" fas fa-save"></i>Enregistrer</button>
                 </div>
             </div>
 
