--- a/templates/back_end/utilisateurs/droits/liste_ip_users.html.twig
+++ b/templates/back_end/utilisateurs/droits/liste_ip_users.html.twig
@@ -15,7 +15,7 @@
 
     <div class="row">
         <div class="col-12">
-            <table data-toggle="table" data-url="{{ path('json_users')}}" data-pagination="true" data-search="true" data-pagination: "true">
+            <table data-toggle="table" data-url="{{ path('json_users')}}" data-pagination="true" data-search="true" data-pagination: "true"  data-show-refresh="true"> 
                 <thead>
                     <tr>
                         <th data-sortable="true" data-field="username">Login de connexion</th>
