--- a/templates/back_end/visa_classic/transports/edit_tarif_transport_visa_classic.html.twig
+++ b/templates/back_end/visa_classic/transports/edit_tarif_transport_visa_classic.html.twig
@@ -43,6 +43,7 @@
                 </div>
             </div>
             <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> Enregistrer </a>
+            {{form_widget(form._token)}}                
 
         {{ form_end(form, {'render_rest': false})}}
     </div>
