--- a/templates/back_end/visa_classic/type_visa_classic_show.html.twig
+++ b/templates/back_end/visa_classic/type_visa_classic_show.html.twig
@@ -20,7 +20,7 @@
                         <th data-field="titre" data-sortable="true">Visa</th>
                         <th data-field="typeEntre" data-sortable="true">Type entrée</th>
                         <th data-field="dureSejour" data-sortable="true">Durée séjour</th>
-                        <th data-field="valide" data-formatter="booleanFormatter" data-align="center" data-sortable="true">Visible sur le site ?</th>
+                        <th data-field="active" data-formatter="booleanFormatter" data-align="center" data-sortable="true">Visible sur le site ?</th>
                         <th data-field="edit" data-formatter="actionsFormatter">Editer</th>
                     </tr>
                 </thead>
