--- a/public/backend/css/main.css
+++ b/public/backend/css/main.css
@@ -184,9 +184,15 @@ th.sujetfaq .fht-cell {
 }
 
 /*PC*/
-@media screen and (min-width: 1024px) and (max-width: 1700px)
+@media screen and (min-width: 1024px) and (max-width: 1300px)
 { 
-    
+    .fas {
+        font-size: 1rem;
+    }
+
+    .petite-taille {
+        font-size: 0.85rem;
+    }
 } 
 
 /*Tablette*/
