--- a/templates/back_end/visa_classic/transports/edit_transport_visa_classic.html.twig
+++ b/templates/back_end/visa_classic/transports/edit_transport_visa_classic.html.twig
@@ -60,6 +60,7 @@
                         <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> </a>
                     </li>
                 </ul>
+                {{form_widget(form._token)}}
             {{ form_end(form, {'render_rest': false})}}
         </div>
     </div>
