--- a/templates/back_end/base.html.twig
+++ b/templates/back_end/base.html.twig
@@ -14,7 +14,7 @@
             <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.5/dist/bootstrap-table.min.css">
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
             <script src="https://kit.fontawesome.com/d4578f32e0.js" crossorigin="anonymous"></script>
-            <script src="{{ asset('bundles/fosjsrouting/js/router.min.js') }}" type="text/js"></script>
+            <script src="{{ asset('bundles/fosjsrouting/js/router.min.js') }}"></script>
             <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
@@ -26,7 +26,6 @@
 
     <body>
         {% block flash %}
-            {% if app.flashes %}
                 <div class="messages">
                     {% for type, messages in app.flashes %}
                         {% for message in messages %}
@@ -40,7 +39,6 @@
                         {% endfor %}
                     {% endfor %}
                 </div>
-            {% endif %}
         {% endblock %}
         {% block header %}
             <div class="container-fluid">
