--- a/templates/back_end/visa_classic/demandes/edit_demandes.html.twig
+++ b/templates/back_end/visa_classic/demandes/edit_demandes.html.twig
@@ -10,7 +10,7 @@
     {% form_theme form '/back_end/jquery.collection.html.twig' %}
 
     <div class="row">
-        <h5 class=" m-auto col-8"><i class="fa fa-globe"></i> Modification d'une commande   </h5>
+        <h5 class=" m-auto col-8"><i class="fa fa-globe"></i> Modification d'une <strong>commande</strong>   </h5>
     </div>
     {{ form_start(form, {'action': path('edit_demandes_visa_classic', {'id': demande.id}), 'method': 'POST'}) }}
     <div class="row justify-content-center mt-5">
